# pomodoro-timer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main.c  main.cpp  timer.c  window
.cache/clangd/index/: main.cpp.59A24CF89B48918A.idx
src/: main.cpp
